[project]
name = "adk-util"
version = "0.1.0"
description = "CLI utility to manage: reasoning engine agents, authorizations, gemini enterprise agents, etc."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "google-auth>=2.43.0",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "typer>=0.20.0",
]

[tool.setuptools]
packages = ["adk-utils"]