[project]
name = "adkutils"
version = "0.7.0"
description = "CLI utility to manage: reasoning engine agents, authorizations, gemini enterprise agents, etc."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "cyclopts>=4.4.0",
    "google-auth>=2.43.0",
    "google-cloud-aiplatform[adk,agent-engines]>=1.130.0",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
]

[tool.setuptools]
packages = ["adkutils"]

[project.scripts]
adk-utils = "adkutils:main.app"
